# spatular

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs
src/models/: ingredient.rs  mod.rs  recipe.rs  recipe_item.rs  recipe_photo.rs  scalar_ingredient.rs
