[package]
name = "spatular"
version = "0.1.0"
edition = "2021"
description = "🍽️ A type system for recipes"
repository = "https://github.com/lancelafontaine/spatular"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
